2010-02-25      Evgeny V. Kokovikhin
	* main/Net/Mail/Mail.class.php: send() without returnPatn fixed.

2010-02-23	Sergey S. Sergeev

	* main/OpenId/OpenIdConsumer.class.php,
	main/OpenId/OpenIdExtension.class.php,
	main/OpenId/OpenIdExtensionAttributeExchange.class.php,
	main/OpenId/OpenIdCredentials.class.php,
	main/OpenId/OpenIdExtensionSreg.class.php: openId 2.0 support, 
	extensions support implemented, sreg and attribute exchange 
	supports - thanks to Alexander V. Solomatin (aka Lom).

	* main/Net/Http/CurlHttpClient.class.php: curl multi send implemented.

	* main/Net/Http/HttpMethod.class.php: methods added.

2010-02-21	Sergey S. Sergeev

	* main/Base/Hstore.class.php: set(), drop() added.

	* main/Net/Mail/Mail.class.php: setReturnPath(), getReturnPath() added.

2010-02-20	Sergey S. Sergeev

	* core/Logic/Expression.class.php, core/Logic/BinaryExpression.class.php:
	modulus logic implemented.

	* core/Logic/HstoreExpression.class.php: containHstore(),
	containValueList() added.

	* core/DB/Dialect.class.php, core/DB/ImaginaryDialect.class.php,
	core/DB/LiteDialect.class.php, core/DB/MyDialect.class.php,
	core/DB/PostgresDialect.class.php, core/OSQL/DeleteQuery.class.php,
	core/OSQL/InsertOrUpdateQuery.class.php, core/OSQL/InsertQuery.class.php,
	core/OSQL/QuerySkeleton.class.php, core/OSQL/SelectQuery.class.php:
	refactoring code. OSQL INSERT/UPDATE/DELETE RETURNING, INSERT from SELECT
	clause implemented.

	* test/main/OsqlDeleteTest.class.php, test/main/OsqlInsertTest.class.php,
	test/main/OsqlReturningTest.class.php, test/main/OsqlSelectTest.class.php:
	useful test cases added.

2010-02-19	Sergey S. Sergeev

	* main/Base/CallChain.class.php: call() method fixed.

	* test/core/FiltersTest.class.php, test/main/Net/MailTest.class.php:
	test assertions added. 

	* main/Net/Mail/MailAddress.class.php: toString() method fixed.

2010-02-02	Evgeny V. Kokovikhin

	* main/Net/Http/Cookie.class.php: zero expire for cookie

2010-01-27	Vladlen Y. Koshelev
